--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <main>
         <ul class="listagem-pokemon">
-            <li class="cartao-pokemon">
+            <li class="cartao-pokemon" id="cartao-grama">
                 <div class="informacoes">
                     <span>Bulbassaur</span>
                     <span>#001</span>
@@ -39,7 +39,7 @@
                 </ul>
                 <p class="descricao">Há uma semente de plata em suas costa desde o dia que este Pókemon nasce. A semente cresce lentamente.</p>
             </li>
-            <li class="cartao-pokemon">
+            <li class="cartao-pokemon" id="cartao-grama">
                 <div class="informacoes">
                     <span>Ivysaur</span>
                     <span>#002</span>
@@ -51,7 +51,7 @@
                 </ul>
                 <p class="descricao">Quando p bulbo em suas costas, parace perder a capacidade de ficar de pé em suas patas traseiras.</p>
             </li>
-            <li class="cartao-pokemon">
+            <li class="cartao-pokemon" id="cartao-grama">
                 <div class="informacoes">
                     <span>Venusaur</span>
                     <span>#003</span>
@@ -63,92 +63,88 @@
                 </ul>
                 <p class="descricao">Sua panta floresce quando está abservendo energia solar, ele permanece em movimento para buscas a luz solar.</p>
             </li>
-            <li class="cartao-pokemon">
+            <li class="cartao-pokemon" id="cartao-fogo">
                 <div class="informacoes">
                     <span>Charmander</span>
                     <span>#004</span>
                 </div>
                 <img src="src/imagens/charmander.gif" alt="Charmander" class="gif">
                 <ul class="tipos">
-                    <li class="tipo grama">Fogo</li>
+                    <li class="tipo fogo">Fogo</li>
                 </ul>
                 <p class="descricao">tem preferência por coisas quentes. Quando chove, diz-se que o vapor jorra da ponta de sua cauda.</p>
             </li>
-            <li class="cartao-pokemon">
+            <li class="cartao-pokemon" id="cartao-fogo">
                 <div class="informacoes">
                     <span>Charmeleon</span>
                     <span>#005</span>
                 </div>
                 <img src="src/imagens/charmeleon.gif" alt="charmeleon" class="gif">
                 <ul class="tipos">
-                    <li class="tipo grama">Fogo</li>
+                    <li class="tipo fogo">Fogo</li>
                 </ul>
-                <p class="descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident minus saepe voluptatem quos autem sint quia vel magnam fugit totam, tempore iure eius tenetur quod voluptas quaerat. Eveniet, quia ipsa?</p>
+                <p class="descricao">Charmeleon é um Pokérmon reptiliano. Ele tem escamas vermelhas na sua parte inferior. Existe um chifre na parte de trás da cabeça. Ele tem olhos verdes e um focinho comprido. Tem braços relativamente longos com três garras afiadas. Suas pernas curtas têm pés com três garras. A ponta de sua cauda longa, poderosa tem uma chama acesa sobre ele.</p>
             </li>
-            <li class="cartao-pokemon">
+            <li class="cartao-pokemon" id="cartao-fogo">
                 <div class="informacoes">
-                    <span>Bulbassaur</span>
-                    <span>#001</span>
+                    <span>Charizard</span>
+                    <span>#006</span>
                 </div>
 
-                <img src="src/imagens/bulbasaur.gif" alt="bulbasaur" class="gif">
+                <img src="src/imagens/charizard.gif" alt="bulbasaur" class="gif">
                 <ul class="tipos">
-                    <li class="tipo grama">Grama</li>
-                    <li class="tipo veneno">Veneno</li>
+                    <li class="tipo fogo">Fogo</li>
                 </ul>
-                <p class="descricao">Há uma semente de plata em suas costa desde o dia que este Pókemon nasce. A semente cresce lentamente.</p>
+                <p class="descricao">Ao contrário de suas pré-evoluções, tem asas que lhe permite voar, é um pokemon muito parecido com um dragão. Como suas formas anteriores, é bípede e tem uma longa cauda com uma chama que só se apaga quando ele morre. Tem três garras extremamente afiadas, dígitos distintos, um longo pescoço, e dois chifres salientes na parte de trás de sua cabeça. A frente de suas duas asas é azul-petróleo, enquanto a traseira é laranja como a maior parte de seu corpo. Embora pouco visível, a iris de Charizard é azul de cor clara. Sua barriga e parte inferior das patas são de cor creme.</p>
             </li>
-            <li class="cartao-pokemon">
+            <li class="cartao-pokemon" id="cartao-agua">
                 <div class="informacoes">
-                    <span>Bulbassaur</span>
-                    <span>#001</span>
+                    <span>Squirtle</span>
+                    <span>#007</span>
                 </div>
 
-                <img src="src/imagens/bulbasaur.gif" alt="bulbasaur" class="gif">
+                <img src="src/imagens/squirtle.gif" alt="bulbasaur" class="gif">
                 <ul class="tipos">
-                    <li class="tipo grama">Grama</li>
-                    <li class="tipo veneno">Veneno</li>
+                    <li class="tipo agua">Água</li>
                 </ul>
-                <p class="descricao">Há uma semente de plata em suas costa desde o dia que este Pókemon nasce. A semente cresce lentamente.</p>
+                <p class="descricao">O casco de Squirtle não é apenas usado para a proteção. A forma arredondada do casco e as ranhuras em sua superfície ajudam a minimizar a resistência na água, permitindo que este Pokémon nade em altas velocidades.</p>
             </li>
-            <li class="cartao-pokemon">
+            <li class="cartao-pokemon" id="cartao-agua">
                 <div class="informacoes">
-                    <span>Bulbassaur</span>
-                    <span>#001</span>
+                    <span>Wartortle</span>
+                    <span>#008</span>
                 </div>
 
-                <img src="src/imagens/bulbasaur.gif" alt="bulbasaur" class="gif">
+                <img src="src/imagens/wartortle.gif" alt="bulbasaur" class="gif">
                 <ul class="tipos">
-                    <li class="tipo grama">Grama</li>
-                    <li class="tipo veneno">Veneno</li>
+                    <li class="tipo agua">Água</li>
                 </ul>
-                <p class="descricao">Há uma semente de plata em suas costa desde o dia que este Pókemon nasce. A semente cresce lentamente.</p>
+                <p class="descricao">Sua cauda é grande e coberta com uma pele rica, espessura. A cauda torna-se cada vez mais profunda em cor com a idade de Wartortle. Os arranhões na seu casco são provas de resistência deste Pokémon como um combatente.</p>
             </li>
-            <li class="cartao-pokemon">
+            <li class="cartao-pokemon" id="cartao-agua">
                 <div class="informacoes">
-                    <span>Bulbassaur</span>
-                    <span>#001</span>
+                    <span>Blastoise</span>
+                    <span>#009</span>
                 </div>
 
-                <img src="src/imagens/bulbasaur.gif" alt="bulbasaur" class="gif">
+                <img src="src/imagens/blastoise.gif" alt="bulbasaur" class="gif">
                 <ul class="tipos">
-                    <li class="tipo grama">Grama</li>
-                    <li class="tipo veneno">Veneno</li>
+                    <li class="tipo agua">Água</li>
                 </ul>
-                <p class="descricao">Há uma semente de plata em suas costa desde o dia que este Pókemon nasce. A semente cresce lentamente.</p>
+                <p class="descricao">Blastoise tem canhões de água que se projetam de seu casco. Os canhões de água são muito precisos. Eles podem disparar balas de água com uma precisão suficiente para atacar latas vazias de uma distância de mais de 160 pés.</p>
             </li>
-            <li class="cartao-pokemon">
+            <li class="cartao-pokemon" id="cartao-inseto">
                 <div class="informacoes">
-                    <span>Bulbassaur</span>
-                    <span>#001</span>
+                    <span>Caterpie<span>
+                    <span>#010</span>
                 </div>
 
-                <img src="src/imagens/bulbasaur.gif" alt="bulbasaur" class="gif">
+                <img src="src/imagens/caterpie.gif" alt="bulbasaur" class="gif">
                 <ul class="tipos">
-                    <li class="tipo grama">Grama</li>
+                    <li class="tipo inseto">Inseto</li>
                     <li class="tipo veneno">Veneno</li>
                 </ul>
-                <p class="descricao">Há uma semente de plata em suas costa desde o dia que este Pókemon nasce. A semente cresce lentamente.</p>
+                <p class="descricao">Caterpie é baseado em uma minhoca. Sua pele é verde, tem olhos amarelos com púpilas pretas, tem uma antena vermelha (rosa no anime) e tem uma "boca" verde (amarela no anime, tem quatro pequenas patas amarelas e em seu corpo, existem vários círculos amarelos e na ponta de sua calda tem uma espécie de chocalho.</p>
             </li>
 
         </ul>
