--- a/index.html
+++ b/index.html
@@ -144,10 +144,14 @@
                     <li class="tipo inseto">Inseto</li>
                     <li class="tipo veneno">Veneno</li>
                 </ul>
-                <p class="descricao">Caterpie é baseado em uma minhoca. Sua pele é verde, tem olhos amarelos com púpilas pretas, tem uma antena vermelha (rosa no anime) e tem uma "boca" verde (amarela no anime, tem quatro pequenas patas amarelas e em seu corpo, existem vários círculos amarelos e na ponta de sua calda tem uma espécie de chocalho.</p>
+                <p class="descricao">Caterpie é baseado em uma minhoca. Sua pele é verde, tem olhos amarelos com púpilas pretas, tem uma antena vermelha (rosa no anime) e tem uma "boca" verde amarela no anime, tem quatro pequenas patas amarelas e em seu corpo, existem vários círculos amarelos e na ponta de sua calda tem uma espécie de chocalho.</p>
             </li>
 
         </ul>
     </main>
+    <footer>
+        <h1>Todos os Direitos Reservados</h1>
+        <p>COPYRIGTH&copy;</p> 
+    </footer>
 </body>
 </html>
