--- a/index.html
+++ b/index.html
@@ -153,5 +153,6 @@
         <h1>Todos os Direitos Reservados</h1>
         <p>COPYRIGTH&copy;</p> 
     </footer>
+    <script src="./src/js/index.js"></script>
 </body>
 </html>
